--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -39,51 +39,38 @@ jobs:
 
       - name: 🔎 Type check
         run: npm run typecheck --if-present
-#  playwright:
-#    name: 🎭 Playwright
-#    runs-on: ubuntu-latest
-#    timeout-minutes: 60
-#    steps:
-#      - name: ⬇️ Checkout repo
-#        uses: actions/checkout@v3
-#
-#      - name: 🏄 Copy test env vars
-#        run: cp .env.example .env
-#
-#      - name: ⎔ Setup node
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: 18
-#
-#      - name: 📥 Download deps
-#        uses: bahmutov/npm-install@v1
-#
-#      - name: 📥 Install Playwright Browsers
-#        run: npm run test:e2e:install
-#
-#      - name: 🛠 Setup Database
-#        run: npx prisma migrate deploy
-#
-#      - name: 🏦 Cache Database
-#        id: db-cache
-#        uses: actions/cache@v3
-#        with:
-#          path: prisma/data.db
-#          key: db-cache
-#
-#      - name: 🏗 Build
-#        run: npm run build
-#
-#      - name: 🎭 Playwright tests
-#        run: npx playwright test
-#
-#      - name: 📊 Upload report
-#        uses: actions/upload-artifact@v3
-#        if: always()
-#        with:
-#          name: playwright-report
-#          path: playwright-report/
-#          retention-days: 30
+  playwright:
+    name: 🎭 Playwright
+    runs-on: ubuntu-latest
+    timeout-minutes: 60
+    steps:
+      - name: ⬇️ Checkout repo
+        uses: actions/checkout@v3
+
+      - name: ⎔ Setup node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - name: 📥 Download deps
+        uses: bahmutov/npm-install@v1
+
+      - name: 📥 Install Playwright Browsers
+        run: npm run test:e2e:install
+
+      - name: 🏗 Build
+        run: npm run build
+
+      - name: 🎭 Playwright tests
+        run: npm run test:e2e:run
+
+      - name: 📊 Upload report
+        uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
