--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -3,6 +3,9 @@ on:
   push:
     branches:
       - main
+concurrency:
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
 jobs:
   lint:
     name: ⬣ ESLint
@@ -74,7 +77,7 @@ jobs:
   deploy:
     name: Deploy app
     runs-on: ubuntu-latest
-    needs: [ lint, typecheck ]
+    needs: [ lint, typecheck, playwright ]
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
