--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -3,9 +3,12 @@ on:
   push:
     branches:
       - main
+  pull_request: {}
+
 concurrency:
     group: ${{ github.workflow }}-${{ github.ref }}
     cancel-in-progress: true
+
 jobs:
   lint:
     name: ⬣ ESLint
@@ -65,7 +68,7 @@ jobs:
         run: npm run build
 
       - name: 🎭 Playwright tests
-        run: npm run test:e2e:run
+        run: npm run test:e2e:ci:run
 
       - name: 📊 Upload report
         uses: actions/upload-artifact@v3
