--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -81,6 +81,7 @@ jobs:
     name: Deploy app
     runs-on: ubuntu-latest
     needs: [ lint, typecheck, playwright ]
+    if: ${{ github.event_name == 'push' }}
     steps:
       - uses: actions/checkout@v3
       - uses: superfly/flyctl-actions/setup-flyctl@master
