--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -51,7 +51,7 @@ jobs:
     timeout-minutes: 60
     steps:
       - name: 📖 Verify Cache
-      - uses: actions/cache@v3
+        uses: actions/cache@v3
         with:
           # See here for caching with `yarn` https://github.com/actions/cache/blob/main/examples.md#node---yarn or you can leverage caching with actions/setup-node https://github.com/actions/setup-node
           path: |
