--- a/fly.toml
+++ b/fly.toml
@@ -13,3 +13,7 @@ primary_region = "waw"
   auto_start_machines = true
   min_machines_running = 0
   processes = ["app"]
+
+[[services]]
+  internal_port = 8080
+  protocol = "tcp"
