--- a/litefs.yml
+++ b/litefs.yml
@@ -29,6 +29,8 @@ proxy:
 # the last command to be long-running (e.g. an application server). When the
 # last command exits, LiteFS is shut down.
 exec:
+  - cmd: "npx prisma migrate deploy"
+    if-candidate: true
   - cmd: "npm run start"
 
 # The lease section specifies how the cluster will be managed. We're using the
