--- a/.github/workflows/fly.yml
+++ b/.github/workflows/fly.yml
@@ -65,6 +65,9 @@ jobs:
       - name: ⬇️ Checkout repo
         uses: actions/checkout@v3
 
+      - name: 🏄 Copy test env vars
+        run: cp .env.example .env
+
       - name: ⎔ Setup node
         uses: actions/setup-node@v3
         with:
@@ -75,6 +78,9 @@ jobs:
 
       - name: 📥 Install Playwright Browsers
         run: npm run test:e2e:install
+
+      - name: 🛠 Setup Database
+        run: npx prisma migrate deploy
 
       - name: 🏗 Build
         run: npm run build
