--- a/litefs.yml
+++ b/litefs.yml
@@ -31,6 +31,7 @@ proxy:
 exec:
   - cmd: "npx prisma migrate deploy"
     if-candidate: true
+  - cmd: "npm run build"
   - cmd: "npm run start"
 
 # The lease section specifies how the cluster will be managed. We're using the
